@@ -4985,7 +4985,6 @@ class t3lib_TCEforms	{
 	 * @return	string		A section with JavaScript - if $update is false, embedded in <script></script>
 	 */
 	function JSbottom($formname='forms[0]', $update = false)	{
-		$jsFile = array();
 		$elements = array();
 
 			// required:
@@ -5015,18 +5014,17 @@ class t3lib_TCEforms	{
 
 		if (!$update) {
 			if ($this->loadMD5_JS) {
-				$jsFile[] =	'<script type="text/javascript" src="'.$this->backPath.'md5.js"></script>';
+				$GLOBALS['TBE_TEMPLATE']->loadJavascriptLib('md5.js');
 			}
 
-			$jsFile[] = '<script type="text/javascript" src="'.$this->backPath.'contrib/prototype/prototype.js"></script>';
-			$jsFile[] = '<script type="text/javascript" src="'.$this->backPath.'contrib/scriptaculous/scriptaculous.js"></script>';
-			$jsFile[] =	'<script type="text/javascript" src="'.$this->backPath.'../t3lib/jsfunc.evalfield.js"></script>';
-			$jsFile[] =	'<script type="text/javascript" src="'.$this->backPath.'jsfunc.tbe_editor.js"></script>';
+			$GLOBALS['TBE_TEMPLATE']->loadJavascriptLib('contrib/prototype/prototype.js');
+			$GLOBALS['TBE_TEMPLATE']->loadJavascriptLib('../t3lib/jsfunc.evalfield.js');
+			$GLOBALS['TBE_TEMPLATE']->loadJavascriptLib('jsfunc.tbe_editor.js');
 
 				// if IRRE fields were processed, add the JavaScript functions:
 			if ($this->inline->inlineCount) {
-				$jsFile[] = '<script src="'.$this->backPath.'contrib/scriptaculous/scriptaculous.js" type="text/javascript"></script>';
-				$jsFile[] = '<script src="'.$this->backPath.'../t3lib/jsfunc.inline.js" type="text/javascript"></script>';
+				$GLOBALS['TBE_TEMPLATE']->loadJavascriptLib('contrib/scriptaculous/scriptaculous.js');
+				$GLOBALS['TBE_TEMPLATE']->loadJavascriptLib('../t3lib/jsfunc.inline.js');
 				$out .= '
 				inline.setPrependFormFieldNames("'.$this->inline->prependNaming.'");
 				inline.setNoTitleString("'.addslashes(t3lib_BEfunc::getNoRecordTitle(true)).'");
@@ -5159,8 +5157,7 @@ class t3lib_TCEforms	{
 
 			// Regular direct output:
 		if (!$update) {
-			$spacer = chr(10).chr(9);
-			$out  = $spacer.implode($spacer, $jsFile).t3lib_div::wrapJS($out);
+			$out  = chr(10) . chr(9) . t3lib_div::wrapJS($out);
 		}
 
 		return $out;
